--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gitignore
 .idea/
-/LinearRegresssion/tflogs/events.out.tfevents.1519338025.GEDEON
 LinearRegresssion/tflogs/
+LinearRegresssion/mnist/
+FFNN/log_mnist_softmax/
+FFNN/mnist/
+
